--- a/package.json
+++ b/package.json
@@ -3,15 +3,27 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clear": "rm -rf dist/ && rm -rf bundle.js && clear",
+    "build": "npm run clear && rollup -c"
   },
   "author": "xusheng.tao <xusheng.tao@ele.me>",
   "license": "MIT",
   "dependencies": {
-    "lodash.debounce": "^4.0.8"
+    "lodash-es": "^4.17.4"
   },
   "devDependencies": {
-    "rollup": "^0.51.7"
+    "eslint": "^4.11.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "rollup": "^0.51.7",
+    "rollup-plugin-eslint": "^4.0.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
+    "uglify-es": "^3.1.10"
   },
   "repository": {
     "type": "git",
