--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "focus-outside",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clear": "rm -rf dist/ && rm -rf bundle.js && clear",
