--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clear": "rm -rf dist/ && rm -rf bundle.js && clear",
     "build": "npm run clear && rollup -c"
   },
-  "author": "xusheng.tao <xusheng.tao@ele.me>",
+  "author": "xusheng.tao <https://github.com/1969290646>",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
