--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.5.3",
   "main": "lib/index.js",
   "scripts": {
-    "clear": "rm -rf dist/ && rm -rf bundle.js && clear",
-    "build": "npm run clear && rollup -c"
+    "clear": "rm -rf dist/ && rm -rf bundle.js",
+    "build": "npm run clear && rollup -c",
+    "lint": "eslint --ext .js,.vue packages",
+    "format": "prettier --config ./.prettierrc.yaml --write 'packages/**/*.{js,vue,css,scss}'",
+    "precommit": "pretty-quick --staged",
+    "dev": "npm run lint && npm run format && webpack-dev-server --inline --progress --config webpack.config.js"
   },
   "author": "xusheng.tao <https://github.com/txs1992>",
   "license": "MIT",
@@ -14,18 +18,37 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.3",
     "eslint": "^4.11.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "html-webpack-plugin": "^4.3.0",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1",
     "rollup": "^0.51.7",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1",
-    "uglify-es": "^3.1.10"
+    "sass-loader": "^8.0.2",
+    "scss-loader": "0.0.1",
+    "uglify-es": "^3.1.10",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.2",
+    "vue-router": "^3.1.6",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "repository": {
     "type": "git",
