feature：修改相关配置，使用 yarn 管理。

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015-rollup": "^3.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
+    "element-ui": "^2.13.2",
     "eslint": "^4.11.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^10.2.1",
@@ -30,6 +31,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^6.2.2",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
@@ -41,7 +43,9 @@
     "rollup-plugin-uglify": "^2.0.1",
     "sass-loader": "^8.0.2",
     "scss-loader": "0.0.1",
+    "typescript": "^3.9.5",
     "uglify-es": "^3.1.10",
+    "url-loader": "^4.1.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.2",
     "vue-router": "^3.1.6",
