--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "clear": "rm -rf dist/ && rm -rf bundle.js",
     "build": "npm run clear && node build/config.js && cp -r typings/ dist/typings",
     "lint": "eslint --ext .js,.vue packages",
+    "test": "yarn lint",
     "format": "prettier --config ./.prettierrc.yaml --write './**/*.{js,vue,css,scss}'",
     "precommit": "pretty-quick --staged",
     "dev": "npm run lint && npm run format && webpack-dev-server --inline --progress --config webpack.config.js"
